[package]
name = "hosttools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fatfs = "0.3.5"
gpt = "3.0.0"
anyhow = "1.0.65"
cargo_metadata = "0.15.0"
fscommon = "0.1.1"
clap = { version = "4.0.7", features = ["derive"] }
xshell = "0.2.2"
