[package]
name = "efiboot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uninit = { version = "0.4.0", default-features = false }

bootinfo = { path = "../bootinfo" }
minielf = { path = "../../lib/minielf" }
num-utils = { path = "../../lib/num-utils" }
uefi = { path = "../uefi" }
