[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
atomic_ref = "0.2.1"
bitflags = "1.2.1"
intrusive-collections = { version = "0.9.4", default-features = false, features = ["nightly"] }
itertools = { version = "0.10.3", default-features = false }
paste = "1.0.9"

bitmap = { path = "../../lib/bitmap" }
bootinfo = { path = "../bootinfo" }
num-utils = { path = "../../lib/num-utils" }
spin-once = { path = "../../lib/spin-once" }
