[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
atomic_ref = "0.2.1"
atomic_refcell = "0.1.10"
bitflags = "2.3.0"
intrusive-collections = { version = "0.9.4", default-features = false, features = ["nightly", "alloc"] }
itertools = { version = "0.10.5", default-features = false }
paste = "1.0.9"
qcell = { version = "0.5.2", default-features = false, features = ["alloc"] }

bitmap = { path = "../../lib/bitmap" }
bootinfo = { path = "../bootinfo" }
num-utils = { path = "../../lib/num-utils" }
object-name = { path = "../../lib/object-name" }
spin-once = { path = "../../lib/spin-once" }
struct-enum = { path = "../../lib/struct-enum" }
log = { version = "0.4.17", default-features = false }
