[package]
name = "uefi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
ucs2 = "0.3.2"
uninit = { version = "0.4.0", default-features = false }

uefi-macros = { path = "../uefi-macros" }
