[package]
name = "uefi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
ucs2 = "0.3.2"
uninit = { version = "0.5.1", default-features = false }

uefi-macros = { path = "../uefi-macros" }
never-say-never = "6.6.666"
